--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+src/db.js
+
 # Logs
 logs
 *.log
@@ -40,6 +42,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
