--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/tradesun/cGuru-server#readme",
   "dependencies": {
     "express": "^5.1.0",
-    "mysql2": "^3.15.0"
+    "mysql2": "^3.15.0",
+    "nodemailer": "^7.0.6"
   }
 }
